{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 841,
  "lineage": "b519837a-e56e-0b3d-06fa-b3aaee92711c",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.135.95.187",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-10-30T12:51:31.995-07:00",
            "id": "projects/mostafa-ashour-project/regions/us-central1/addresses/address",
            "name": "address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "mostafa-ashour-project",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mostafa-ashour-project/regions/us-central1/addresses/address"
          },
          "dependencies": [
            "module.google_networks.google_compute_network.main",
            "module.google_networks.google_compute_subnetwork.management-subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20220920",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/mostafa-ashour-project/zones/us-central1-a/disks/app-cluster"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/mostafa-ashour-project/zones/us-central1-a/instances/app-cluster",
            "instance_id": "1490221017718811434",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "q__12zziLrQ=",
            "name": "app-cluster",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/mostafa-ashour-project/global/networks/kubernetes-cluster",
                "network_ip": "10.2.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/mostafa-ashour-project/regions/us-central1/subnetworks/management-subnetwork",
                "subnetwork_project": "mostafa-ashour-project"
              }
            ],
            "project": "mostafa-ashour-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mostafa-ashour-project/zones/us-central1-a/instances/app-cluster",
            "service_account": [
              {
                "email": "serviceaccountidforvms2@mostafa-ashour-project.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.bastion.google_service_account.vms",
            "module.google_networks.google_compute_network.main",
            "module.google_networks.google_compute_subnetwork.management-subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-10-30T12:51:18.320-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mostafa-ashour-project/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/mostafa-ashour-project/global/networks/kubernetes-cluster",
            "priority": 1000,
            "project": "mostafa-ashour-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mostafa-ashour-project/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.google_networks.google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "enable_ula_internal_ipv6": false,
            "id": "projects/mostafa-ashour-project/global/networks/kubernetes-cluster",
            "mtu": 0,
            "name": "kubernetes-cluster",
            "project": "mostafa-ashour-project",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mostafa-ashour-project/global/networks/kubernetes-cluster"
          }
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/mostafa-ashour-project/global/routes/egress-internet",
            "name": "egress-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/mostafa-ashour-project/global/networks/kubernetes-cluster",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/mostafa-ashour-project/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "mostafa-ashour-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mostafa-ashour-project/global/routes/egress-internet",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.google_networks.google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-10-30T12:51:32.006-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/mostafa-ashour-project/regions/us-central1/routers/router",
            "name": "router",
            "network": "https://www.googleapis.com/compute/v1/projects/mostafa-ashour-project/global/networks/kubernetes-cluster",
            "project": "mostafa-ashour-project",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mostafa-ashour-project/regions/us-central1/routers/router"
          },
          "dependencies": [
            "module.google_networks.google_compute_network.main",
            "module.google_networks.google_compute_subnetwork.management-subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "mostafa-ashour-project/us-central1/router/nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "mostafa-ashour-project",
            "region": "us-central1",
            "router": "router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.google_networks.google_compute_network.main",
            "module.google_networks.google_compute_router.router",
            "module.google_networks.google_compute_subnetwork.management-subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "management-subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-10-30T12:51:18.890-07:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/mostafa-ashour-project/regions/us-central1/subnetworks/management-subnetwork",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "management-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/mostafa-ashour-project/global/networks/kubernetes-cluster",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "mostafa-ashour-project",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mostafa-ashour-project/regions/us-central1/subnetworks/management-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.google_networks.google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-10-30T12:51:18.521-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/mostafa-ashour-project/regions/us-central1/subnetworks/restricted-subnet",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "restricted-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/mostafa-ashour-project/global/networks/kubernetes-cluster",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "mostafa-ashour-project",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.48.0.0/14",
                "range_name": "k8s-pod-range"
              },
              {
                "ip_cidr_range": "10.52.0.0/20",
                "range_name": "k8s-service-range"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mostafa-ashour-project/regions/us-central1/subnetworks/restricted-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.google_networks.google_compute_network.main"
          ]
        }
      ]
    }
  ]
}